// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridViewRows component with decoration Default component with firs_cell decoration 1`] = `
<div
  class="grid-view__rows"
  style="transform: translateY(0px) translateX(0px);"
>
  <div
    class="grid-view__row"
  >
    <!---->
     
    <div
      class="grid-view__column"
      style="width: 70px;"
    >
      <div
        class="grid-view__row-info"
      >
        <div
          class="grid-view__row-count"
          title="2"
        >
          
            2
          
        </div>
         
        <div
          class="grid-view__row-drag"
        />
         
        <a
          class="grid-view__row-more"
        >
          <i
            class="fas fa-expand"
          />
        </a>
         
        <div>
          fake_decoration: fake_value
        </div>
        <div>
          fake_decoration: fake_value
        </div>
      </div>
    </div>
     
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          Bram
        </div>
      </div>
    </div>
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-view__row"
  >
    <!---->
     
    <div
      class="grid-view__column"
      style="width: 70px;"
    >
      <div
        class="grid-view__row-info"
      >
        <div
          class="grid-view__row-count"
          title="4"
        >
          
            4
          
        </div>
         
        <div
          class="grid-view__row-drag"
        />
         
        <a
          class="grid-view__row-more"
        >
          <i
            class="fas fa-expand"
          />
        </a>
         
        <div>
          fake_decoration: fake_value
        </div>
        <div>
          fake_decoration: fake_value
        </div>
      </div>
    </div>
     
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          foo
        </div>
      </div>
    </div>
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          bar
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GridViewRows component with decoration Default component with row wrapper decoration 1`] = `
<div
  class="grid-view__rows"
  style="transform: translateY(0px) translateX(0px);"
>
  <div
    class="testWrapper"
  />
  <div
    class="testWrapper"
  />
</div>
`;

exports[`GridViewRows component with decoration Default component with unavailable decoration 1`] = `
<div
  class="grid-view__rows"
  style="transform: translateY(0px) translateX(0px);"
>
  <div
    class="grid-view__row"
  >
    <!---->
     
    <div
      class="grid-view__column"
      style="width: 70px;"
    >
      <div
        class="grid-view__row-info"
      >
        <div
          class="grid-view__row-count"
          title="2"
        >
          
            2
          
        </div>
         
        <div
          class="grid-view__row-drag"
        />
         
        <a
          class="grid-view__row-more"
        >
          <i
            class="fas fa-expand"
          />
        </a>
         
      </div>
    </div>
     
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          Bram
        </div>
      </div>
    </div>
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-view__row"
  >
    <!---->
     
    <div
      class="grid-view__column"
      style="width: 70px;"
    >
      <div
        class="grid-view__row-info"
      >
        <div
          class="grid-view__row-count"
          title="4"
        >
          
            4
          
        </div>
         
        <div
          class="grid-view__row-drag"
        />
         
        <a
          class="grid-view__row-more"
        >
          <i
            class="fas fa-expand"
          />
        </a>
         
      </div>
    </div>
     
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          foo
        </div>
      </div>
    </div>
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          bar
        </div>
      </div>
    </div>
  </div>
</div>
`;
